--- a/CoreBuild/Packages/PackageOne/package.json
+++ b/CoreBuild/Packages/PackageOne/package.json
@@ -9,7 +9,9 @@
 		"registry": "https://npm.pkg.github.com/@frg-ivan"
 	},
 	"scripts": {
-		"patch": "npm version patch -m \"[RELEASE][PATCH] %npm_package_name%@%s\"",
+		"info" : "echo %npm_package_version%",
+		"patch": "(npm version patch --no-git-tag-version -m \"[RELEASE][PATCH] %npm_package_name%@%s\") & (git tag v%npm_package_version%)",
+		"minor": "npm version minor -m \"[RELEASE][MINOR] %npm_package_name%@%s\"",
 		"minor": "npm version minor -m \"[RELEASE][MINOR] %npm_package_name%@%s\"",
 		"major": "npm version major -m \"[RELEASE][MAJOR] %npm_package_name%@%s\"",
 		"publish": "(git push --quiet) & (git push --tags --quiet) & (echo Published %npm_package_name%@%npm_package_version%)"
