--- a/CoreBuild/Packages/PackageOne/package.json
+++ b/CoreBuild/Packages/PackageOne/package.json
@@ -10,8 +10,8 @@
 	},
 	"scripts": {
 		"info": "echo %npm_package_version%",
-		"patch": "(npm version patch --no-git-tag-version) & (git tag -a v%npm_package_version -m \"[RELEASE][PATCH] %npm_package_name%@%s\")",
-		"minor": "(npm version minor --no-git-tag-version) & (git tag -a v%npm_package_version -m \"[RELEASE][MINOR] %npm_package_name%@%s\")",
+		"patch": "(npm version patch --no-git-tag-version) & (git add -A && git commit -m \"[RELEASE][PATCH] %npm_package_name%@%s\")&(git tag -a v%npm_package_version)",
+		"minor": "(npm version minor --no-git-tag-version) & (git add -A && git commit -m \"[RELEASE][MINOR] %npm_package_name%@%s\")&(git tag -a v%npm_package_version)",
 		"major": "npm version major -m \"[RELEASE][MAJOR] %npm_package_name%@%s\"",
 		"publish": "(git push --quiet) & (git push --tags --quiet) & (echo Published %npm_package_name%@%npm_package_version%)"
 	},
