--- a/CoreBuild/Packages/PackageOne/package.json
+++ b/CoreBuild/Packages/PackageOne/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@frg-ivan/com.company.core.packageone",
-	"version": "0.4.0",
+	"version": "0.6.0",
 	"displayName": "PackageOne",
 	"description": "PackageOne description.",
 	"keywords": [],
@@ -9,6 +9,7 @@
 		"registry": "https://npm.pkg.github.com/@frg-ivan"
 	},
 	"scripts": {
+		"build": "node build.js",
 		"patch": "npm version patch -m \"[RELEASE][PATCH] %npm_package_name%@%s\"",
 		"minor": "npm version minor -m \"[RELEASE][MINOR] %npm_package_name%@%s\"",
 		"major": "npm version major -m \"[RELEASE][MAJOR] %npm_package_name%@%s\"",
