--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
           scope: '@frg-ivan'
-      - run: echo "MODULE_TO_PUBLISH=$(git tag --points-at HEAD | cut --complement -c 1-16)" >> $GITHUB_ENV
+      - run: echo "MODULE_TO_PUBLISH=$(git tag --points-at HEAD | cut -d. -f1-5 --complement)" >> $GITHUB_ENV
       - run: echo $MODULE_TO_PUBLISH
       - run: cd ./${MODULE_TO_PUBLISH}
       - run: ls
