--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -22,10 +22,11 @@ jobs:
       - run: ls -l
       - run: echo "MODULE_TO_PUBLISH=$(git tag --points-at HEAD | cut -d. -f1-5 --complement)" >> $GITHUB_ENV
       - run: echo $MODULE_TO_PUBLISH
-      - working-directory: CoreBuild/Packages/${MODULE_TO_PUBLISH}
       - run: ls -l
       - run: npm install
+        working-directory: CoreBuild/Packages/${MODULE_TO_PUBLISH}
       - run: npm publish
+        working-directory: CoreBuild/Packages/${MODULE_TO_PUBLISH}
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
