[RELEASE][MINOR] @frg-ivan/com.company.core.packagetwo@0.16.0

--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -24,9 +24,9 @@ jobs:
       - run: echo $MODULE_TO_PUBLISH
       - run: ls -l
       - run: npm install
-        working-directory: CoreBuild/Packages/${MODULE_TO_PUBLISH}
+        working-directory: ./CoreBuild/Packages/${MODULE_TO_PUBLISH}
+      - run: ls -l
       - run: npm publish
-        working-directory: CoreBuild/Packages/${MODULE_TO_PUBLISH}
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
