--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -25,10 +25,10 @@ jobs:
       - run: ls -l
       - run: npm install
         #working-directory: CoreBuild/Packages/${MODULE_TO_PUBLISH}
-        working-directory: CoreBuild/Packages/$MODULE_TO_PUBLISH/
+        working-directory: CoreBuild/Packages/${{MODULE_TO_PUBLISH}}
       - run: ls -l
       - run: npm publish
-        working-directory: CoreBuild/Packages/$MODULE_TO_PUBLISH/
+        working-directory: CoreBuild/Packages/${{MODULE_TO_PUBLISH}}
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
