--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -21,7 +21,7 @@ jobs:
           scope: '@frg-ivan'
       - run: ls -l
       - run: echo "MODULE_TO_PUBLISH=$(git tag --points-at HEAD | cut -d. -f1-5 --complement)" >> $GITHUB_ENV
-      - run: echo $MODULE_TO_PUBLISH
+      - run: echo ${{MODULE_TO_PUBLISH}}
       - run: ls -l
       - run: npm install
         #working-directory: CoreBuild/Packages/${MODULE_TO_PUBLISH}
