--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -21,14 +21,18 @@ jobs:
           scope: '@frg-ivan'
       - run: ls -l
       - run: echo "MODULE_TO_PUBLISH=$(git tag --points-at HEAD | cut -d. -f1-5 --complement)" >> $GITHUB_ENV
-      - run: echo ${{MODULE_TO_PUBLISH}}
+      - run: echo $MODULE_TO_PUBLISH
       - run: ls -l
       - run: npm install
         #working-directory: CoreBuild/Packages/${MODULE_TO_PUBLISH}
-        working-directory: CoreBuild/Packages/${{MODULE_TO_PUBLISH}}
+        working-directory: CoreBuild/Packages/${{STAZA1}}
+        env:
+            STAZA1: $MODULE_TO_PUBLISH
       - run: ls -l
       - run: npm publish
-        working-directory: CoreBuild/Packages/${{MODULE_TO_PUBLISH}}
+        working-directory: CoreBuild/Packages/${{STAZA2}}
+        env:
+            STAZA2: $MODULE_TO_PUBLISH
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
