--- a/CoreBuild/Packages/PackageTwo/package.json
+++ b/CoreBuild/Packages/PackageTwo/package.json
@@ -1,12 +1,16 @@
 {
 	"name": "@frg-ivan/com.company.core.packagetwo",
-	"version": "0.33.0",
+	"version": "0.34.0",
 	"displayName": "PackageTwo",
 	"description": "PackageTwo description.",
 	"keywords": [],
 	"type": "tool",
 	"publishConfig": {
 		"registry": "https://npm.pkg.github.com/@frg-ivan"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/frg-ivan/unity-package-multi-package-repo.git"
 	},
 	"scripts": {
 		"build": "node build.js",
