[RELEASE][MINOR] @frg-ivan/com.company.core.packagetwo@0.49.0

--- a/CoreBuild/Packages/PackageTwo/package.json
+++ b/CoreBuild/Packages/PackageTwo/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@frg-ivan/com.company.core.packagetwo",
-	"version": "0.48.0",
+	"version": "0.49.0",
 	"displayName": "PackageTwo",
 	"description": "PackageTwo description.",
 	"keywords": [],
@@ -13,13 +13,12 @@
 		"url": "git+https://github.com/frg-ivan/unity-package-multi-package-repo.git"
 	},
 	"scripts": {
+		"info": "echo %npm_package_name%@%npm_package_version%",
 		"build": "node build.js",
-		"info": "echo %npm_package_version%",
+		"push": "(git push --quiet) & (git push --tags --quiet) & (echo Published %npm_package_name%@%npm_package_version%)",
 		"patch": "(npm version patch --no-git-tag-version) & (git add -A && git commit -m \"[RELEASE][PATCH] %npm_package_name%@%npm_package_version%\")&(git tag -a v%npm_package_version% -m \"v%npm_package_version%\")",
 		"minor": "(npm version minor --no-git-tag-version) & (git add -A && git commit -m \"[RELEASE][MINOR] %npm_package_name%@%npm_package_version%\")&(git tag -a v%npm_package_version% -m \"v%npm_package_version%\")",
-		"major": "(npm version major --no-git-tag-version) & (git add -A && git commit -m \"[RELEASE][MAJOR] %npm_package_name%@%npm_package_version%\")&(git tag -a v%npm_package_version% -m \"v%npm_package_version%\")",
-		"upload": "(git push --quiet) & (git push --tags --quiet) & (echo Published %npm_package_name%@%npm_package_version%)",
-		"publish2npmrepo": "npm install & (echo Publishing... %npm_package_name%@%npm_package_version% to %(npm_registry_name%) & npm publish & (echo Uploaded %npm_package_name%@%npm_package_version%)"
+		"major": "(npm version major --no-git-tag-version) & (git add -A && git commit -m \"[RELEASE][MAJOR] %npm_package_name%@%npm_package_version%\")&(git tag -a v%npm_package_version% -m \"v%npm_package_version%\")"
 	},
 	"dependencies": {}
 }
