[RELEASE][MINOR] @frg-ivan/com.company.core.packagetwo@0.50.0

--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -22,8 +22,8 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: '@frg-ivan'
       - run: ls -l
-      #- run: echo "MODULE_TO_PUBLISH_PATH=$(git tag --points-at HEAD | cut -d. -f1-5 --complement)" >> $GITHUB_ENV
-      - run: echo "MODULE_TO_PUBLISH_PATH=PackageTwo" >> $GITHUB_ENV
+      - run: echo "MODULE_TO_PUBLISH_PATH=$(git tag --points-at HEAD | cut -d. -f1-5 --complement)" >> $GITHUB_ENV
+      #- run: echo "MODULE_TO_PUBLISH_PATH=PackageTwo" >> $GITHUB_ENV
       - run: echo ${{env.MODULE_TO_PUBLISH_PATH}}
       - run: ls -l
       - run: npm install
