--- a/CoreBuild/Packages/PackageOne/package.json
+++ b/CoreBuild/Packages/PackageOne/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@frg-ivan/com.company.core.packageone",
-	"version": "0.6.0",
+	"version": "0.7.0",
 	"displayName": "PackageOne",
 	"description": "PackageOne description.",
 	"keywords": [],
@@ -9,12 +9,9 @@
 		"registry": "https://npm.pkg.github.com/@frg-ivan"
 	},
 	"scripts": {
+		"info": "echo %npm_package_name%@%npm_package_version%",
 		"build": "node build.js",
-		"info": "echo %npm_package_version%",
-		"patch": "(npm version patch --no-git-tag-version) & (git add -A && git commit -m \"[RELEASE][PATCH] %npm_package_name%@%npm_package_version%\")&(git tag -a v%npm_package_version% -m \"v%npm_package_version%\")",
-		"minor": "(npm version minor --no-git-tag-version) & (git add -A && git commit -m \"[RELEASE][MINOR] %npm_package_name%@%npm_package_version%\")&(git tag -a v%npm_package_version% -m \"v%npm_package_version%\")",
-		"major": "(npm version major --no-git-tag-version) & (git add -A && git commit -m \"[RELEASE][MAJOR] %npm_package_name%@%npm_package_version%\")&(git tag -a v%npm_package_version% -m \"v%npm_package_version%\")",
-		"publish": "(git push --quiet) & (git push --tags --quiet) & (echo Published %npm_package_name%@%npm_package_version%)"
+		"push": "(git push --quiet) & (git push --tags --quiet) & (echo Published %npm_package_name%@%npm_package_version%)"
 	},
 	"dependencies": {}
 }
