--- a/CoreBuild/Packages/PackageTwo/package.json
+++ b/CoreBuild/Packages/PackageTwo/package.json
@@ -15,10 +15,7 @@
 	"scripts": {
 		"info": "echo %npm_package_name%@%npm_package_version%",
 		"build": "node build.js",
-		"push": "(git push --quiet) & (git push --tags --quiet) & (echo Published %npm_package_name%@%npm_package_version%)",
-		"patch": "(npm version patch --no-git-tag-version) & (git add -A && git commit -m \"[RELEASE][PATCH] %npm_package_name%@%npm_package_version%\")&(git tag -a v%npm_package_version% -m \"v%npm_package_version%\")",
-		"minor": "(npm version minor --no-git-tag-version) & (git add -A && git commit -m \"[RELEASE][MINOR] %npm_package_name%@%npm_package_version%\")&(git tag -a v%npm_package_version% -m \"v%npm_package_version%\")",
-		"major": "(npm version major --no-git-tag-version) & (git add -A && git commit -m \"[RELEASE][MAJOR] %npm_package_name%@%npm_package_version%\")&(git tag -a v%npm_package_version% -m \"v%npm_package_version%\")"
+		"push": "(git push --quiet) & (git push --tags --quiet) & (echo Published %npm_package_name%@%npm_package_version%)"
 	},
 	"dependencies": {}
 }
